@@ -56,6 +56,10 @@ public class HttpConnection extends AbstractConnection {
      */
     private final Proxy proxy;
     /**
+     * Optional instance of an EventSampler to use.
+     */
+    private EventSampler eventSampler;
+    /**
      * Marshaller used to transform and send the {@link Event} over a stream.
      */
     private Marshaller marshaller;
@@ -75,23 +79,27 @@ public class HttpConnection extends AbstractConnection {
      * @param sentryUrl URL to the Sentry API.
      * @param publicKey public key of the current project.
      * @param secretKey private key of the current project.
+     * @deprecated use the more explicit constructor below
      */
+    @Deprecated
     public HttpConnection(URL sentryUrl, String publicKey, String secretKey) {
-        this(sentryUrl, publicKey, secretKey, null);
+        this(sentryUrl, publicKey, secretKey, null, null);
     }
 
-    /**
+     /**
      * Creates an HTTP connection to a Sentry server.
      *
      * @param sentryUrl URL to the Sentry API.
      * @param publicKey public key of the current project.
      * @param secretKey private key of the current project.
      * @param proxy address of HTTP proxy or null if using direct connections.
+     * @param eventSampler EventSampler instance to use, or null to not sample events.
      */
-    public HttpConnection(URL sentryUrl, String publicKey, String secretKey, Proxy proxy) {
+    public HttpConnection(URL sentryUrl, String publicKey, String secretKey, Proxy proxy, EventSampler eventSampler) {
         super(publicKey, secretKey);
         this.sentryUrl = sentryUrl;
         this.proxy = proxy;
+        this.eventSampler = eventSampler;
     }
 
     /**
@@ -140,6 +148,10 @@ public class HttpConnection extends AbstractConnection {
 
     @Override
     protected void doSend(Event event) throws ConnectionException {
+        if (eventSampler != null && !eventSampler.shouldSendEvent(event)) {
+            return;
+        }
+
         HttpURLConnection connection = getConnection();
         try {
             connection.connect();
