@@ -1,6 +1,7 @@
 Version 7.8.1
 -------------
 
+- Add ``raven.sample.rate`` DSN option to optionally reduce the number of events sent to the server.
 - Make Breadcrumbs serializable.
 - Don't log errors in RavenServletRequestListener if Raven hasn't been initialized.
 
